--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,5 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.95"
-axum = { version = "0.8.1", features = ["macros"] }
-sqlx = { version = "0.8.3", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
+redis = { version = "0.29.0", features = ["tokio-rustls-comp"] }
 tokio = { version = "1.43.0", features = ["full"] }
